--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="form-group"><input name="email" class="input-style" type="text" placeholder="Email"></input></div>
     <div class="form-group"><input name="business-name" class="input-style" type="text" placeholder="Business Name"></input></div>
     <div class="form-group"><input name="user-name" class="input-style" type="text" placeholder="Username"></input></div>
-    <div class="form-group"><input name="password" class="input-style" type="text" placeholder="Password"></input></div>
-    <div class="form-group"><input name="verify-password" class="input-style" type="text" placeholder="Verify Password"></input></div>
-    <div class="form-group"><button name="submit-button" class="button-style" type="button" disabled>Submit</button></div>
+    <div class="form-group"><input name="password" class="input-style" type="password" placeholder="Password"></input></div>
+    <div class="form-group"><input name="verify-password" class="input-style" type="password" placeholder="Verify Password"></input></div>
+    <div class="form-group"><button name="submit-button" class="button-style" type="button">Submit</button></div>
     <div id="result-message"></div>
   </form>
 </div>
